@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.6.3 on Sat Feb  6 01:36:46 2010 -->
+<!-- generated by wxGlade 0.6.3 on Sat Feb  6 16:23:51 2010 -->
 
-<application path="/home/andrewb/dev/bleeding/Padre-Plugin-Swarm/wxgen/preferences" name="" class="MyApp" option="0" language="perl" top_window="dialog_1" encoding="UTF-8" use_gettext="1" overwrite="0" use_new_namespace="1" for_version="2.8" is_template="0">
+<application path="/home/andrewb/dev/bleeding/Padre-Plugin-Swarm/wxgen/preferences" name="" class="MyApp" option="0" language="perl" top_window="dialog_1" encoding="UTF-8" use_gettext="0" overwrite="1" use_new_namespace="1" for_version="2.8" is_template="0">
     <object class="wxDialog" name="dialog_1" base="EditDialog">
         <style>wxDEFAULT_DIALOG_STYLE|wxRESIZE_BORDER|wxTHICK_FRAME</style>
         <title>Preferences</title>
