@@ -1,5 +1,7 @@
 Changes for Perl extension Padre-Plugin-Swarm
 0.09 -
+	- more useful output returned from runme
+        - prevent loopback of runme message type
 	- prevent loopback of openme message type
 	- add preferences dialog
 
